infrastructure/base/teak-talos-dev/dbgate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dbgate
  namespace: teak-talos-dev
  labels:
    app.kubernetes.io/name: dbgate
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dbgate
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
